--- a/miniprojekti/pom.xml
+++ b/miniprojekti/pom.xml
@@ -78,6 +78,12 @@
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>cobertura-maven-plugin</artifactId>
                 <version>2.6</version>
+                <configuration>
+                    <instrumentation>
+                        <exclude>GUI/*.class</exclude>
+                        <exclude>Database/*.class</exclude>
+                    </instrumentation>
+                </configuration>
             </plugin>
             
             <plugin>
@@ -87,14 +93,12 @@
                 <configuration>
                     <targetClasses>
                         <param>Avaingenerointi*</param>
-                        <param>Database*</param>
                         <param>Engine*</param>
                         <param>Syotetarkistus*</param>
                         <param>domain*</param>
                     </targetClasses>
                     <targetTests>
                         <param>Avaingenerointi*</param>
-                        <param>Database*</param>
                         <param>Engine*</param>
                         <param>Syotetarkistus*</param>
                         <param>domain*</param>
